--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       - cert-vol:/letsencrypt
       - /var/run/docker.sock:/var/run/docker.sock:ro
 
-  custom-erpnext-nginx:
-    image: custom-erpnext-nginx:${ERPNEXT_VERSION}
+  isppme-erpnext-nginx:
+    image: isppme-erpnext-nginx:${ERPNEXT_VERSION}
     restart: on-failure
     environment:
       - FRAPPE_PY=erpnext-python
@@ -33,15 +33,15 @@ services:
       - SOCKETIO_PORT=9000
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.custom-erpnext-nginx.rule=Host(${SITES})"
+      - "traefik.http.routers.isppme-erpnext-nginx.rule=Host(${SITES})"
       - "${ENTRYPOINT_LABEL}"
-      - "traefik.http.services.custom-erpnext-nginx.loadbalancer.server.port=80"
+      - "traefik.http.services.isppme-erpnext-nginx.loadbalancer.server.port=80"
     volumes:
       - sites-vol:/var/www/html/sites:rw
       - assets-vol:/assets:rw
 
   erpnext-python:
-    image: custom-erpnext-worker:${ERPNEXT_VERSION}
+    image: isppme-erpnext-worker:${ERPNEXT_VERSION}
     restart: on-failure
     environment:
       - MARIADB_HOST=${MARIADB_HOST}
@@ -62,8 +62,8 @@ services:
     volumes:
       - sites-vol:/home/frappe/frappe-bench/sites:rw
 
-  custom-erpnext-worker-default:
-    image: custom-erpnext-worker:${ERPNEXT_VERSION}
+  isppme-erpnext-worker-default:
+    image: isppme-erpnext-worker:${ERPNEXT_VERSION}
     restart: on-failure
     command: worker
     depends_on:
@@ -72,8 +72,8 @@ services:
     volumes:
       - sites-vol:/home/frappe/frappe-bench/sites:rw
 
-  custom-erpnext-worker-short:
-    image: custom-erpnext-worker:${ERPNEXT_VERSION}
+  isppme-erpnext-worker-short:
+    image: isppme-erpnext-worker:${ERPNEXT_VERSION}
     restart: on-failure
     command: worker
     environment:
@@ -84,8 +84,8 @@ services:
     volumes:
       - sites-vol:/home/frappe/frappe-bench/sites:rw
 
-  custom-erpnext-worker-long:
-    image: custom-erpnext-worker:${ERPNEXT_VERSION}
+  isppme-erpnext-worker-long:
+    image: isppme-erpnext-worker:${ERPNEXT_VERSION}
     restart: on-failure
     command: worker
     environment:
@@ -97,7 +97,7 @@ services:
       - sites-vol:/home/frappe/frappe-bench/sites:rw
 
   erpnext-schedule:
-    image: custom-erpnext-worker:${ERPNEXT_VERSION}
+    image: isppme-erpnext-worker:${ERPNEXT_VERSION}
     restart: on-failure
     command: schedule
     depends_on:
@@ -134,7 +134,7 @@ services:
       - mariadb-vol:/var/lib/mysql
 
   site-creator:
-    image: custom-erpnext-worker:${ERPNEXT_VERSION}
+    image: isppme-erpnext-worker:${ERPNEXT_VERSION}
     restart: "no"
     command: new
     depends_on:
