--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,4 +1,4 @@
 ARG FRAPPE_BRANCH=develop
 FROM frappe/erpnext-worker:${FRAPPE_BRANCH}
 
-RUN install_app isppme https://github.com/kingraphaii/isppme master
+RUN install_app isppme https://github.com/kingraphaii/isppme main
