--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   custom-erpnext-nginx:
-    image: frappe/erpnext-nginx:${ERPNEXT_VERSION}
+    image: custom-erpnext-nginx:${ERPNEXT_VERSION}
     restart: on-failure
     environment:
       - FRAPPE_PY=erpnext-python
@@ -22,7 +22,7 @@ services:
       - assets-vol:/assets:rw
 
   erpnext-python:
-    image: frappe/erpnext-worker:${ERPNEXT_VERSION}
+    image: custom-erpnext-worker:${ERPNEXT_VERSION}
     restart: on-failure
     environment:
       - MARIADB_HOST=${MARIADB_HOST}
@@ -44,7 +44,7 @@ services:
       - sites-vol:/home/frappe/frappe-bench/sites:rw
 
   custom-erpnext-worker-default:
-    image: frappe/erpnext-worker:${ERPNEXT_VERSION}
+    image: custom-erpnext-worker:${ERPNEXT_VERSION}
     restart: on-failure
     command: worker
     depends_on:
@@ -54,7 +54,7 @@ services:
       - sites-vol:/home/frappe/frappe-bench/sites:rw
 
   custom-erpnext-worker-short:
-    image: frappe/erpnext-worker:${ERPNEXT_VERSION}
+    image: custom-erpnext-worker:${ERPNEXT_VERSION}
     restart: on-failure
     command: worker
     environment:
@@ -66,7 +66,7 @@ services:
       - sites-vol:/home/frappe/frappe-bench/sites:rw
 
   custom-erpnext-worker-long:
-    image: frappe/erpnext-worker:${ERPNEXT_VERSION}
+    image: custom-erpnext-worker:${ERPNEXT_VERSION}
     restart: on-failure
     command: worker
     environment:
@@ -78,7 +78,7 @@ services:
       - sites-vol:/home/frappe/frappe-bench/sites:rw
 
   erpnext-schedule:
-    image: frappe/erpnext-worker:${ERPNEXT_VERSION}
+    image: custom-erpnext-worker:${ERPNEXT_VERSION}
     restart: on-failure
     command: schedule
     depends_on:
@@ -115,7 +115,7 @@ services:
       - mariadb-vol:/var/lib/mysql
 
   site-creator:
-    image: frappe/erpnext-worker:${ERPNEXT_VERSION}
+    image: custom-erpnext-worker:${ERPNEXT_VERSION}
     restart: "no"
     command: new
     depends_on:
